<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="bluetooth_advanced_settings">Advanced settings</string>
    <string name="bluetooth_profile_ftp">File transfer</string>
    <string name="bluetooth_ftp_profile_summary_use_for">Use for file transfer</string>
    <string name="bluetooth_ftp_profile_summary_connected">Connected to file transfer</string>
    <string name="mtp_transfer_unmount_error_text">SD card can not be unmounted during file transferring</string>
    <string name="mtp_transfer_erase_error_text">SD card can not be erased during file transferring</string>
    <string name="launch_error">"Couldn't launch the application!"</string>
    <string name="dlg_confirm_unmount_usb_title">Unmount USB storage?</string>
    <string name="dlg_confirm_unmount_usb_text">If you unmount the USB storage, some apps you are using will stop and may be unavailable until you remount the USB storage.</string>
    <string name="dlg_error_unmount_usb_title" />
    <string name="dlg_error_unmount_usb_text">"Couldn't unmount USB storage. Try again later."</string>
    <string name="unmount_usb_inform_text">USB storage will be unmounted.</string>
    <string name="sd_eject_usbstorage">Unmount USB storage</string>
    <string name="sd_eject_usbstorage_summary">Unmount USB storage so you can safely remove it</string>
    <string name="sd_mount_usbstorage">Mount USB storage</string>
    <string name="sd_insert_usb_summary">Insert USB storage for mounting</string>
    <string name="usb_ums_title">USB storage</string>
    <string name="usb_ums_summary">XP recommended. Lets you transfer files between your computer and your Android device.</string>
    <string name="usb_charge_title">Charge only</string>
    <string name="usb_charge_summary">Stop all USB fuctions.Lets you speed up USB charging and decrease power consumption.</string>
    <string name="NI_Request_ID">Requestor ID</string>
    <string name="NI_Request_ClientName">Client Name</string>
    <string name="agps_str_verify">Verification</string>
    <string name="agps_str_notify">Notification</string>
    <string name="EM_NotifyDialog_title">EM Notify</string>
    <string name="agps_OK">OK</string>
    <string name="agps_str_allow">ALLOW</string>
    <string name="agps_str_deny">DENY</string>
    <string name="agps_str_error">Error</string>
    <string name="AGPS_DEFAULT_STRING">A-GPS Default String</string>
    <string name="AGPS_CAUSE_NETWORK_CREATE_FAIL">Network Create Fail</string>
    <string name="AGPS_CAUSE_BAD_PUSH_CONTENT">Incorrect PUSH content</string>
    <string name="AGPS_CAUSE_NOT_SUPPORTED">Unsupported Operation</string>
    <string name="AGPS_CAUSE_REQ_NOT_ACCEPTED">Requeset Not Accepted</string>
    <string name="AGPS_CAUSE_NO_RESOURCE">No Resourcce to Handle new process</string>
    <string name="AGPS_CAUSE_NETWORK_DISCONN">Network Connection is Down</string>
    <string name="AGPS_CAUSE_REMOTE_ABORT">Remote Side Abort the Session (receive SUPL END)</string>
    <string name="AGPS_CAUSE_TIMER_EXPIRY">Expect Message not Back During a Specific Time Interval</string>
    <string name="AGPS_CAUSE_REMOTE_MSG_ERROR">Receive Incorrect Message Content</string>
    <string name="AGPS_CAUSE_USER_AGREE">User agree on confirmation</string>
    <string name="AGPS_CAUSE_USER_DENY">User deny on confirmation</string>
    <string name="AGPS_CAUSE_NO_POSITION">Only for NO Position</string>
    <string name="AGPS_CAUSE_TLS_AUTH_FAIL">TLS authentication fail</string>
    <string name="USER_RESPONSE_TIMEOUT">Waiting verification timeout</string>
    <string name="AGPS_MODEM_RESET_HAPPEN">Modem reset happen</string>
    <string name="AGPS_EM_RECV_SI_REQ">SI Request Received</string>
    <string name="AGPS_EM_POS_FIXED">Position Fixed</string>
    <string name="AGPS_NOTIFY_ONLY">Location Request Notification</string>
    <string name="AGPS_NOTIFY_ALLOW_NO_ANSWER">Location Request (Allow if no Answer)</string>
    <string name="AGPS_NOTIFY_DENY_NO_ANSWER">Location Request (Deny if no Answer)</string>
    <string name="AGPS_NOTIFY_PRIVACY">Location Request (Privacy)</string>
    <string name="epo_entrance_title">EPO settings</string>
    <string name="epo_entrance_summary">Click to modify EPO configurations</string>
    <string name="agps_settings_title">A-GPS Settings</string>
    <string name="epo_enable_confirm_title">EPO enable confirm</string>
    <string name="epo_enable_confirm_message">It needs a wireless data connection to acquire GPS assistance data (EPO) that may cause extra network fee. Are you sure to turn on GPS assistance?</string>
    <string name="epo_enable_confirm_allow">Continue</string>
    <string name="epo_enable_confirm_deny">Cancel</string>
    <string name="agps_enable_confirm_title">A-GPS Enable Confirm</string>
    <string name="agps_enable_confirm">A-GPS needs a wireless data connection to acquire the assistant data that may cause extra fees. Are you sure to turn on the A-GPS?</string>
    <string name="agps_enable_confirm_allow">Continue</string>
    <string name="agps_enable_confirm_deny">Cancel</string>
    <string name="epo_enable_title">GPS EPO assistance</string>
    <string name="epo_enable_summary">Use GPS assistance data (EPO) to speed up GPS positioning.</string>
    <string name="agps_settings_enable">A-GPS</string>
    <string name="agps_settings_enable_on">GPS can speed up the fixed time of location with assistant data via wireless data connection</string>
    <string name="agps_settings_enable_off">Use assistant data to speed up the fixed time of location with GPS</string>
    <string name="agps_settings_eng_enable">A-GPS settings</string>
    <string name="agps_settings_eng_summary">Set up A-GPS settings</string>
    <string name="agps_disable_on_reboot">Disable after Reboot</string>
    <string name="agps_disable_on_reboot_summary">Disable A-GPS capability after reboot</string>
    <string name="Network_Initiate">Network Request</string>
    <string name="Network_Initiate_Summary_on">Allow network to request position</string>
    <string name="Network_Initiate_Summary_off">Deny network to request position</string>
    <string name="sound_category_feedback_title">System</string>
    <string name="sound_category_calls_title">Incoming calls</string>
    <string name="voice_call_title">Voice call ringtone</string>
    <string name="voice_call_summary">Set your default voice calls ringtone</string>
    <string name="video_call_title">Video call ringtone</string>
    <string name="video_call_summary">Set your default video calls ringtone</string>
    <string name="Phone_vibrate_summary">Vibrate devices for incoming calls</string>
    <string name="vibrate_title">Vibrate</string>
    <string name="audio_profile_settings_title">Audio profiles</string>
    <string name="gemini_sim_management_title">SIM management</string>
    <string name="schedule_power_on_off_settings_title">Scheduled power on &amp; off</string>
    <string name="call_connect_vibrate">Call connect vibrate</string>
    <string name="turn_silent_mode_title">Turn over to mute</string>
    <string name="turn_silent_mode_summary">Turn phone from face up to down to mute incoming call and alarm</string>
    <string name="power_saving_title">Power saving</string>
    <string name="power_saving_summary">"Automatically restrict power use when your phone's battery is low"</string>
    <string name="power_saving_setting_title">Power saving settings</string>
    <string name="header_category_wireless_networks">WIRELESS &amp; NETWORKS</string>
    <string name="header_category_device">DEVICE</string>
    <string name="header_category_personal">PERSONAL</string>
    <string name="header_category_system">SYSTEM</string>
    <string name="radio_controls_title">More…</string>
    <string name="wireless_networks_settings_title">Wireless &amp; networks</string>
    <string name="date_and_time_settings_title">Date &amp; time</string>
    <string name="location_settings_title">Location access</string>
    <string name="security_settings_title">Security</string>
    <string name="bluetooth_settings_title">Bluetooth</string>
    <string name="wifi_settings_title">Wi-Fi</string>
    <string name="testing_wifi_info">Wi-Fi information</string>
    <string name="wifi_api_test">Wi-Fi API</string>
    <string name="wifi_status_test">Wi-Fi status</string>
    <string name="wifi_config_info">Wi-Fi config</string>
    <string name="sound_settings">Sound</string>
    <string name="all_volume_title">Volumes</string>
    <string name="notification_sound_title">Default notification</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="sound_effects_enable_title">Touch sounds</string>
    <string name="lock_sounds_enable_title">Screen lock sound</string>
    <string name="haptic_feedback_enable_title">Vibrate on touch</string>
    <string name="account_settings">Accounts</string>
    <string name="display_settings">Display</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_summary">Adjust the brightness of the screen</string>
    <string name="screen_timeout">Sleep</string>
    <string name="screen_timeout_summary">After %1$s of inactivity</string>
    <string name="storage_settings">Storage</string>
    <string name="about_settings">About phone</string>
    <string name="applications_settings">Apps</string>
    <string name="language_settings">Language &amp; input</string>
    <string name="testing">Testing</string>
    <string name="testing_phone_info">Phone information</string>
    <string name="testing_battery_info">Battery information</string>
    <string name="development_settings_title">Developer options</string>
    <string name="testing_usage_stats">Usage statistics</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="power_usage_summary_title">Battery</string>
    <string name="battery_since_unplugged">Battery use since unplugged</string>
    <string name="privacy_settings">Backup &amp; reset</string>
    <string name="sound_category_sound_title">General</string>
    <string name="sound_category_notification_title">Notifications</string>
    <string name="add_account_label">Add account</string>
    <string name="data_usage_summary_title">Data usage</string>
    <string name="user_settings_title">Users</string>
    <string name="power_level_summary">%1$s</string>
    <string name="power_brightness_summary">Set brightness to %1$s</string>
    <string name="custom_saving_setting_title">Custom power saving settings</string>
    <string name="power_level_title">Power saving on at</string>
    <string name="turn_off_wifi_title">Turn off Wlan</string>
    <string name="turn_off_wifi_summary">Turn off Wlan when not connected</string>
    <string name="turn_off_bluetooth_title">Turn off Bluetooth</string>
    <string name="turn_off_bluetooth_summary">Turn off Bluetooth when not in use</string>
    <string name="turn_off_gps_title">Turn off GPS</string>
    <string name="turn_off_gps_summary">Turn off GPS when not in use</string>
    <string name="turn_off_sync_title">Turn off Sync</string>
    <string name="turn_off_sync_summary">Turn off Sync when phone is not Synchronizing with server</string>
    <string name="screen_timeout_details">Adjust the delay before the screen automatically turns off</string>
    <string name="performance_mode_title">Performance mode</string>
    <string name="performance_mode_summary">Choose performance mode</string>
    <string name="call_connect_vibrate_summary">Vibrate devices for connecting calls</string>
</resources>