<?xml version="1.0" encoding="utf-8"?>
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:id="@id/wireless_section" android:title="@string/header_category_wireless_networks" />
    <header android:icon="@drawable/ic_settings_dualsim" android:id="@id/sim_settings" android:title="@string/gemini_sim_management_title" android:fragment="com.mediatek.gemini.SimManagement" />
    <header android:icon="@drawable/ic_settings_wireless" android:id="@id/wifi_settings" android:title="@string/wifi_settings_title" android:fragment="com.android.settingsstock.wifi.WifiSettings" />
    <header android:icon="@drawable/ic_settings_bluetooth2" android:id="@id/bluetooth_settings" android:title="@string/bluetooth_settings_title" android:fragment="com.android.settingsstock.bluetooth.BluetoothSettings" />
    <header android:icon="@drawable/ic_settings_data_usage" android:id="@id/data_usage_settings" android:title="@string/data_usage_summary_title" android:fragment="com.android.settingsstock.DataUsageSummary" />
    <header android:id="@id/operator_settings" android:fragment="com.android.settingsstock.WirelessSettings">
        <intent android:action="com.android.settingsstock.OPERATOR_APPLICATION_SETTING" />
    </header>
    <header android:icon="@drawable/empty_icon" android:id="@id/wireless_settings" android:title="@string/radio_controls_title" android:fragment="com.android.settingsstock.WirelessSettings" android:breadCrumbTitle="@string/wireless_networks_settings_title" />
    <header android:id="@id/device_section" android:title="@string/header_category_device" />
    <header android:icon="@drawable/ic_settings_profiles" android:id="@id/audioprofle_settings" android:title="@string/audio_profile_settings_title" android:fragment="com.mediatek.audioprofile.AudioProfileSettings" />
    <header android:icon="@drawable/ic_settings_sound" android:id="@id/sound_settings" android:title="@string/sound_settings" android:fragment="com.android.settingsstock.SoundSettings" />
    <header android:icon="@drawable/ic_settings_display" android:id="@id/display_settings" android:title="@string/display_settings" android:fragment="com.android.settingsstock.DisplaySettings" />
    <header android:icon="@drawable/ic_settings_storage" android:id="@id/storage_settings" android:title="@string/storage_settings" android:fragment="com.android.settingsstock.deviceinfo.Memory" />
    <header android:icon="@drawable/ic_settings_battery" android:id="@id/battery_settings" android:title="@string/power_usage_summary_title" android:fragment="com.android.settingsstock.fuelgauge.PowerUsageSummary" />
    <header android:icon="@drawable/ic_settings_applications" android:id="@id/application_settings" android:title="@string/applications_settings" android:fragment="com.android.settingsstock.applications.ManageApplications" />
    <header android:icon="@drawable/ic_settings_multiuser" android:id="@id/user_settings" android:title="@string/user_settings_title" android:fragment="com.android.settingsstock.users.UserSettings" />
    <header android:id="@id/manufacturer_settings" android:fragment="com.android.settingsstock.WirelessSettings">
        <intent android:action="com.android.settingsstock.MANUFACTURER_APPLICATION_SETTING" />
    </header>
    <header android:id="@id/personal_section" android:title="@string/header_category_personal" />
    <header android:icon="@drawable/ic_settings_location" android:id="@id/location_settings" android:title="@string/location_settings_title" android:fragment="com.android.settingsstock.LocationSettings" />
    <header android:icon="@drawable/ic_settings_security" android:id="@id/security_settings" android:title="@string/security_settings_title" android:fragment="com.android.settingsstock.SecuritySettings" />
    <header android:icon="@drawable/ic_settings_language" android:id="@id/language_settings" android:title="@string/language_settings" android:fragment="com.android.settingsstock.inputmethod.InputMethodAndLanguageSettings" />
    <header android:icon="@drawable/ic_settings_backup" android:id="@id/privacy_settings" android:title="@string/privacy_settings" android:fragment="com.android.settingsstock.PrivacySettings" />
    <header android:id="@id/account_settings" android:title="@string/account_settings" />
    <header android:icon="@drawable/ic_menu_add" android:id="@id/account_add" android:title="@string/add_account_label">
        <intent android:action="android.settings.ADD_ACCOUNT_SETTINGS" />
    </header>
    <header android:id="@id/system_section" android:title="@string/header_category_system" />
    <header android:icon="@drawable/ic_settings_date_time" android:id="@id/date_time_settings" android:title="@string/date_and_time_settings_title" android:fragment="com.android.settingsstock.DateTimeSettings" />
    <header android:icon="@drawable/ic_settings_schpwronoff" android:id="@id/power_settings" android:title="@string/schedule_power_on_off_settings_title">
        <intent android:action="com.android.settingsstock.SCHEDULE_POWER_ON_OFF_SETTING" />
    </header>
    <header android:icon="@drawable/ic_settings_accessibility" android:id="@id/accessibility_settings" android:title="@string/accessibility_settings" android:fragment="com.android.settingsstock.AccessibilitySettings" />
    <header android:icon="@drawable/ic_settings_development" android:id="@id/development_settings" android:title="@string/development_settings_title" android:fragment="com.android.settingsstock.DevelopmentSettings" />
    <header android:icon="@drawable/ic_settings_about" android:id="@id/about_settings" android:title="@string/about_settings" android:fragment="com.android.settingsstock.DeviceInfoSettings" />
</preference-headers>